# learn-tui

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  artifacts.json  changelog.rss  flake.nix  index.html  shell.nix
.github/workflows/: publish.yml  release.yml  web.yml
artifacts/: index.html
changelog/: index.html
crates/bbml/: Cargo.toml
crates/bbml/src/: lib.rs
crates/bbml/tests/: headers.rs  links.rs  lists.rs  misc.rs  tables.rs
crates/client/: Cargo.toml
crates/client/src/: auth.rs  content.rs  course.rs  lib.rs  membership.rs  terms.rs  users.rs
crates/tui/: .gitignore  Cargo.toml  oranda.json
crates/tui/src/: app.rs  auth_cache.rs  config.rs  event.rs  handler.rs  login_prompt.rs  main.rs  main_screen.rs  styles.rs  tui.rs  viewer.rs
crates/tui/src/downloader/: mod.rs  worker.rs
crates/tui/src/main_screen/: mod.rs
crates/tui/src/main_screen/panes/: mod.rs  viewer.rs
crates/tui/src/main_screen/panes/navigation/: mod.rs
crates/tui/src/main_screen/panes/viewer/: content.rs  downloads.rs  mod.rs  welcome.rs
crates/tui/src/panes/: mod.rs  navigation.rs  viewer.rs
crates/tui/src/panes/navigation/: mod.rs  tree.rs
crates/tui/src/screens/: content.rs  course.rs  courses.rs  mod.rs  navigation.rs  viewer.rs
crates/tui/src/store/: downloader.rs  mod.rs  worker.rs
crates/tui/src/widgets/: mod.rs  stateful_list.rs
www/: doc-index.html
