[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/tui",
    "crates/bbml"
]

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
ratatui = { version = "0.25.0", features = ["unstable-rendered-line-info"] }

[workspace.metadata.dist]
cargo-dist-version = "0.11.1"
installers = ["shell", "powershell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
ci = ["github"]
pr-run-mode = "skip"

[profile.dist]
inherits = "release"
lto = "thin"
