[workspace]
resolver = "2"
members = [
    "crates/client",
    "crates/tui",
    "crates/bbml"
]

[workspace.dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
ratatui = { version = "0.25.0", features = ["unstable-rendered-line-info"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "skip"
# Publish jobs to run in CI
publish-jobs = ["./publish"]

[profile.dist]
inherits = "release"
lto = "thin"
