[package]
name = "bbml"
version = "0.0.1"
description = "Renders BbML (a subset of HTML) to ratatui text"
homepage = "https://git.tardisproject.uk/tcmal/learn-tui"
documentation = "https://docs.rs/edlearn_tui"
repository = "https://github.com/tcmal/learn-tui"
readme = "../../README.md"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.13"
log = { workspace = true }
ratatui = { workspace = true }
tl = "0.7.7"

[dev-dependencies]
pretty_assertions = "1.4.0"
