[package]
name = "bblearn_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie_store = "0.20.0"
regex = "1.10.2"
thiserror = "1.0.51"
ureq = { version = "2.9.1", features = ["json", "cookies"] }

serde = { workspace = true }
serde_json = { workspace = true }