[package]
name = "bblearn_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest_cookie_store = "0.6.0"
regex = "1.10.2"
thiserror = "1.0.51"
reqwest = { version = "0.11.24", features = ["blocking", "cookies",  "json"] }

log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.31", features = ["serde"] }
