[package]
name = "edlearn_tui"
version = "0.0.1"
description = "A TUI for Edinburgh Uni's Learn"
homepage = "https://git.tardisproject.uk/tcmal/learn-tui"
documentation = "https://docs.rs/edlearn_tui"
repository = "https://git.tardisproject.uk/tcmal/learn-tui"
readme = "../../README.md"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bbml = { version = "0.0.1", path = "../bbml" }
camino = "1.1.6"
crossterm = "0.27.0"
edlearn_client = { version = "0.0.1", path = "../client" }
log = { workspace = true }
open = "5.0.1"
ratatui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplelog = "0.12.1"
tui-tree-widget = "0.16.0"
xdg = "2.5.2"
